--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -22,6 +22,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0px 200px;
 }
 
 .nav-title {
@@ -43,4 +44,16 @@ nav li {
 nav a {
     text-decoration: none;
     color: #474747;
+}
+/*   header  style */
+.header{
+    background-color: #FFF8F3;
+}
+.banner{
+    padding: 30px  30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
