--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -109,12 +109,39 @@ nav a {
 }
 
 /*  main section style */
-
+main {
+    max-width: 1140px;
+    margin: 0 auto;
+}
 
 /*  about section style */
 .about {
     padding: 130px;
     border-radius: 10px;
     background: #FFF8F3;
-    margin: 130px 230px;
+    margin: 130px 0px;
+}
+
+.about-info-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.about-info {
+    text-align: center;
+    padding-bottom: 0px;
+}
+
+.info-title {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 0px;
+}
+
+.info-description {
+    color: #474747;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 10px;
 }
