--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -184,9 +184,49 @@ main section {
 }
 
 /*   Resume Section Styles */
+.section-title{
+    color: #474747;
+font-size: 30px;
+font-weight: 700;
+}
 
 .resume-column-title {
     color: #474747;
     font-size: 30px;
     font-weight: 700;
+}
+
+.resume-container {
+    display: flex;
+    gap: 50px;
+}
+
+.resume-item-title {
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.resume-item-instuitute {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
+.resume-item-description {
+    color: #757575;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+.resume-container hr{
+    margin: 30px 0px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 113px;
 }
