--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -230,3 +230,10 @@ font-weight: 700;
     margin-top: 50px;
     margin-bottom: 113px;
 }
+/* footer style */
+
+footer{
+    display: flex;
+    background-color: #FFF8F3;
+    padding: 130px 230px;
+}
