--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,6 +48,7 @@ nav {
     color: #181818;
     font-size: 45px;
     font-weight: 800;
+
 }
 
 nav>ul {
@@ -184,10 +185,10 @@ main section {
 }
 
 /*   Resume Section Styles */
-.section-title{
+.section-title {
     color: #474747;
-font-size: 30px;
-font-weight: 700;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 .resume-column-title {
@@ -222,18 +223,90 @@ font-weight: 700;
     font-weight: 400;
     line-height: 28px;
 }
-.resume-container hr{
+
+.resume-container hr {
     margin: 30px 0px;
 }
-.download-cv{
+
+.download-cv {
     text-align: center;
     margin-top: 50px;
     margin-bottom: 113px;
 }
+
 /* footer style */
 
-footer{
+footer {
     display: flex;
+    gap: 100px;
     background-color: #FFF8F3;
     padding: 130px 230px;
+}
+
+.footer-column {
+    width: 50%;
+}
+
+.section-description {
+    text-align: left;
+    color: #474747;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+.social-links a {
+    margin-right: 24px;
+}
+
+.social-links img {
+    width: 24px;
+    height: 24px;
+}
+
+.section-title-book {
+    color: #181818;
+    text-align: left;
+    font-size: 35px;
+    font-weight: 700;
+    margin-bottom: 20px;
+}
+
+.section-description-book {
+    margin-top: 0px;
+    margin-bottom: 30px;
+    color: #474747;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 28px;
+}
+
+/*  From style */
+.contact input[type="text"],
+.contact [type="email"],
+textarea {
+    display: block;
+    margin-bottom: 25px;
+    margin-top: 30px;
+    font-size: 16px;
+    color: #757575;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #FFF;
+    border: 0px;
+    width: 60%
+}
+
+.contact input[type="text"] {
+    height: 40px;
+}
+
+.gaddafi-bd{
+    background-color: #181818;
+    padding: 30px;
+}
+.my-text{
+    text-align: center;
+    color: #757575;
 }
