--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -15,8 +15,11 @@ body {
     font-size: 20px;
     font-weight: 700;
     color: white;
-    padding: 15px 35px;
+    padding: 20px 35px;
 
+}
+.fa-solid{
+    margin-right: 20px;
 }
 
 .btn-primary-two {
